# serde

./: Cargo.toml
serde/: Cargo.toml
serde/src/: lib.rs
serde/src/private/: de.rs
serde_core/: Cargo.toml
serde_core/src/: crate_root.rs
serde_derive/: Cargo.toml
serde_derive/src/: bound.rs  de.rs  deprecated.rs  fragment.rs  lib.rs  ser.rs  this.rs
serde_derive/src/de/: enum_.rs  enum_adjacently.rs  enum_externally.rs  enum_internally.rs  enum_untagged.rs  identifier.rs  struct_.rs  tuple.rs
serde_derive/src/internals/: ast.rs  attr.rs  check.rs  receiver.rs
serde_derive_internals/: Cargo.toml
test_suite/: Cargo.toml
test_suite/no_std/: Cargo.toml
test_suite/tests/: test_annotations.rs  test_borrow.rs  test_de.rs  test_de_error.rs  test_enum_adjacently_tagged.rs  test_enum_internally_tagged.rs  test_enum_untagged.rs  test_identifier.rs  test_macros.rs  test_roundtrip.rs  test_ser.rs  test_value.rs
test_suite/tests/unstable/: mod.rs
