[package]
name = "serde_test_suite"
version = "0.0.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "David Tolnay <dtolnay@gmail.com>"]
edition = "2024"
rust-version = "1.93"
publish = false

[features]
unstable = ["serde/unstable"]

[dependencies]
serde = { workspace = true }

[dev-dependencies]
automod = { workspace = true }
foldhash = { workspace = true }
rustversion = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_derive = { workspace = true, features = ["deserialize_in_place"] }
serde_test = { workspace = true }
trybuild = { workspace = true }
