[package]
name = "serde_derive_tests_no_std"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2024"
rust-version = "1.93"
publish = false

[dependencies]
libc = { version = "0.2", default-features = false }
serde = { version = "1.0.228", path = "../../serde", default-features = false }
serde_derive = { version = "1.0.228", path = "../../serde_derive" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]
